--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: 'LC Chalk';
+    font-style: normal;
+    font-weight: 400;
+    src: local('LC Chalk'), local('LCChalk-Regular'),
+        url(http://allfont.ru/cache/fonts/lc-chalk_f1d4fe8c891a041c5c29929c73b3870a.woff) format('woff'),
+        url(http://allfont.ru/cache/fonts/lc-chalk_f1d4fe8c891a041c5c29929c73b3870a.ttf) format('truetype');
+}
+
 * {
     box-sizing: border-box;
 }
